UPDATE css to avoid double border about inputs

--- a/frontend-service/src/views/_components/MyFilters/MyFilters.module.scss
+++ b/frontend-service/src/views/_components/MyFilters/MyFilters.module.scss
@@ -65,7 +65,6 @@
     background: transparent;
     border: 0px;
     border-radius: 0px;
-    border-bottom: var(--inputtext-border) !important;
     width: 100% !important;
 
     &:focus,
